--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,6 @@ body{
     width: 80%;
     margin: auto;
     padding: 1rem;
-
-    height: 200px;
 }
 
 .contenuto{
@@ -57,4 +55,9 @@ button{
     color: #b91450;
 
     font-weight: bold;
+}
+
+.biglietto{
+    border: 1px solid #000;
+    border-right: none;
 }
