--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ button{
     font-weight: bold;
 }
 
+.hidden{
+    display: none;
+}
+
 .biglietto{
     border: 1px solid #000;
     border-right: none;
